<resources>
    <string name="app_name">Pizzaria</string>
    <string name="app_queijo">Queijo</string>
    <string name="app_calabresa">Calabresa</string>
    <string name="app_portuguesa">Portuguesa</string>
    <string name="app_borda">Borda Recheada</string>
    <string name="app_calcular">Calcular</string>
    <string name="app_valor">Valor da Compra </string>
    
<string-array name="app_forma_pagamento">
    <item>Cartão de Crédito</item>
    <item>Dinheiro</item>
    <item>Vale Refeição</item>
</string-array>
</resources>
