<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pizzaria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.cristiana.pizzaria.PizzariaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rbgSabores">

            <RadioButton
                android:text="@string/app_queijo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbt_queijo"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/app_calabresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbtCalabresa"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/app_portuguesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbtPortuguesa"
                android:layout_weight="1" />

            <CheckBox
                android:text="@string/app_borda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ckbBorda"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spFormaPagamento"
                android:layout_weight="1"
                android:entries="@array/app_forma_pagamento"/>

            <Button
                android:text="@string/app_calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCalcular"
                android:layout_weight="1"
                android:onClick="calcular"/>
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>
